--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tldraw/assets": "^4.3.0",
     "consola": "^3.4.2",
     "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "react-i18next": "^16.5.4",
     "tldraw": "^4.3.0"
