--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tldraw/assets": "^4.3.0",
@@ -53,7 +54,9 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "typescript": "^5.9.3",
+    "unplugin-auto-import": "^21.0.0",
     "vite": "^7.2.6",
-    "vite-plugin-static-copy": "^3.2.0"
+    "vite-plugin-static-copy": "^3.2.0",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
