feat: init crawl/seed shape proc

--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@antv/graphlib": "^2.0.4",
+    "@antv/layout": "1.2.14-beta.8",
+    "@dagrejs/dagre": "^2.0.3",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tldraw/assets": "^4.3.0",
     "consola": "^3.4.2",
+    "electron-window-state": "^5.0.3",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
@@ -42,6 +46,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "antd": "^6.2.2",
+    "dagre": "link:@types/@dagrejs/dagre",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-vite": "^5.0.0",
